--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>5.1.47</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.8</version>
+        </dependency>
+
+
 
 
 
